[gd_scene load_steps=28 format=2]

[ext_resource path="res://gfx/dia_no_more.png" type="Texture" id=1]
[ext_resource path="res://gfx/dia_e_more.png" type="Texture" id=2]
[ext_resource path="res://gfx/dia_important.png" type="Texture" id=3]
[ext_resource path="res://gfx/dia_e_where.png" type="Texture" id=4]
[ext_resource path="res://gfx/dia_e_who.png" type="Texture" id=5]
[ext_resource path="res://gfx/dia_e_epoh.png" type="Texture" id=6]
[ext_resource path="res://gfx/dia_what.png" type="Texture" id=7]
[ext_resource path="res://gfx/dia_check_up.png" type="Texture" id=8]
[ext_resource path="res://gfx/dia_e_dark.png" type="Texture" id=9]
[ext_resource path="res://gfx/dia_keeper.png" type="Texture" id=10]
[ext_resource path="res://gfx/dia_mine.png" type="Texture" id=11]
[ext_resource path="res://gfx/dia_e_area.png" type="Texture" id=12]
[ext_resource path="res://gfx/dia_e_drone.png" type="Texture" id=13]
[ext_resource path="res://dialog.gd" type="Script" id=14]
[ext_resource path="res://audio/Empty Streets.wav" type="AudioStream" id=15]
[ext_resource path="res://gfx/epoh_sitting.png" type="Texture" id=16]
[ext_resource path="res://gfx/keeper.png" type="Texture" id=17]
[ext_resource path="res://gfx/dia_empty.png" type="Texture" id=18]
[ext_resource path="res://gfx/enter.png" type="Texture" id=19]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 16 )
region = Rect2( 0, 0, 15, 16 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 16 )
region = Rect2( 15, 0, 15, 16 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 16 )
region = Rect2( 30, 0, 15, 16 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ null, null, null, null, null, null, null, null, SubResource( 1 ), SubResource( 1 ), SubResource( 1 ), SubResource( 1 ), SubResource( 1 ), SubResource( 1 ), SubResource( 1 ), SubResource( 1 ), SubResource( 2 ), SubResource( 1 ), SubResource( 2 ), SubResource( 2 ), SubResource( 3 ) ],
"loop": false,
"name": "default",
"speed": 3.0
} ]

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 17 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 17 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 17 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=8]
animations = [ {
"frames": [ SubResource( 5 ), SubResource( 6 ), SubResource( 7 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="Dialog" type="YSort"]
script = ExtResource( 14 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 329.0
margin_bottom = 192.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="dia_e_where" type="Sprite" parent="."]
visible = false
position = Vector2( 101.259, 50.5702 )
texture = ExtResource( 4 )

[node name="dia_what" type="Sprite" parent="."]
visible = false
position = Vector2( 226.734, 133.33 )
texture = ExtResource( 7 )

[node name="dia_e_epoh" type="Sprite" parent="."]
visible = false
position = Vector2( 101.259, 50.5702 )
texture = ExtResource( 6 )

[node name="dia_e_who" type="Sprite" parent="."]
visible = false
position = Vector2( 101.259, 50.5702 )
texture = ExtResource( 5 )

[node name="dia_keeper" type="Sprite" parent="."]
visible = false
position = Vector2( 226.734, 133.33 )
texture = ExtResource( 10 )

[node name="dia_e_dark" type="Sprite" parent="."]
visible = false
position = Vector2( 101.259, 50.5702 )
texture = ExtResource( 9 )

[node name="dia_mine" type="Sprite" parent="."]
visible = false
position = Vector2( 226.734, 133.33 )
texture = ExtResource( 11 )

[node name="dia_e_drone" type="Sprite" parent="."]
visible = false
position = Vector2( 101.259, 50.5702 )
texture = ExtResource( 13 )

[node name="dia_important" type="Sprite" parent="."]
visible = false
position = Vector2( 226.734, 133.33 )
texture = ExtResource( 3 )

[node name="dia_e_area" type="Sprite" parent="."]
visible = false
position = Vector2( 101.259, 50.5702 )
texture = ExtResource( 12 )

[node name="dia_check_up" type="Sprite" parent="."]
visible = false
position = Vector2( 226.734, 133.33 )
texture = ExtResource( 8 )

[node name="dia_e_more" type="Sprite" parent="."]
visible = false
position = Vector2( 101.259, 50.5702 )
texture = ExtResource( 2 )

[node name="dia_no_more" type="Sprite" parent="."]
visible = false
position = Vector2( 226.734, 133.33 )
texture = ExtResource( 1 )

[node name="dia_empty" type="Sprite" parent="."]
visible = false
position = Vector2( 226.734, 133.33 )
texture = ExtResource( 18 )

[node name="Timer" type="Timer" parent="."]
wait_time = 10.5
autostart = true

[node name="Timer2" type="Timer" parent="."]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 15 )
volume_db = -4.919
autoplay = true

[node name="epoh" type="AnimatedSprite" parent="."]
position = Vector2( 47.9848, 145.28 )
frames = SubResource( 4 )
frame = 4

[node name="Mob" type="AnimatedSprite" parent="."]
position = Vector2( 736.273, 138.717 )
frames = SubResource( 8 )
playing = true

[node name="Enter" type="Sprite" parent="."]
visible = false
position = Vector2( 313.346, 171.259 )
texture = ExtResource( 19 )
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]
